# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("menu") {
  sources = [
    "action_factory.h",
    "action_factory.mm",
    "menu_action_type.h",
  ]
  configs += [ "//build/config/compiler:enable_arc" ]
  deps = [
    "//base",
    "//ios/chrome/app/strings",
    "//ios/chrome/browser/ui/util",
    "//net",
    "//ui/base",
    "//url",
  ]
}

source_set("unit_tests") {
  configs += [ "//build/config/compiler:enable_arc" ]
  testonly = true
  sources = [ "action_factory_unittest.mm" ]
  deps = [
    ":menu",
    "//base",
    "//base/test:test_support",
    "//ios/chrome/app/strings",
    "//ios/chrome/browser",
    "//ios/chrome/browser/browser_state:test_support",
    "//ios/chrome/browser/main:test_support",
    "//ios/web/public/test",
    "//testing/gtest",
    "//third_party/ocmock",
    "//ui/base",
    "//ui/base:test_support",
  ]
}
