# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/asset_catalog.gni")

imageset("copy_link_url") {
  sources = [
    "copy_link_url.imageset/Contents.json",
    "copy_link_url.imageset/copy_link_url@2x.png",
    "copy_link_url.imageset/copy_link_url@3x.png",
  ]
}
