# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("password_details") {
  configs += [ "//build/config/compiler:enable_arc" ]
  sources = [
    "password_details_coordinator.h",
    "password_details_coordinator.mm",
    "password_details_coordinator_delegate.h",
    "password_details_mediator.h",
    "password_details_mediator.mm",
  ]
  deps = [
    ":password_details_ui",
    "//base",
    "//components/autofill/core/common",
    "//components/strings",
    "//components/url_formatter",
    "//ios/chrome/app/strings",
    "//ios/chrome/browser",
    "//ios/chrome/browser/passwords",
    "//ios/chrome/browser/ui:feature_flags",
    "//ios/chrome/browser/ui/commands",
    "//ios/chrome/browser/ui/coordinators:chrome_coordinators",
    "//ios/chrome/browser/ui/table_view",
    "//ios/chrome/common/ui/colors",
    "//ios/chrome/common/ui/util",
    "//ui/base",
  ]
}

source_set("password_details_ui") {
  configs += [ "//build/config/compiler:enable_arc" ]
  sources = [
    "password_details.h",
    "password_details.mm",
    "password_details_consumer.h",
    "password_details_handler.h",
    "password_details_table_view_constants.h",
    "password_details_table_view_constants.mm",
    "password_details_view_controller.h",
    "password_details_view_controller.mm",
    "password_details_view_controller_delegate.h",
  ]
  deps = [
    "//base",
    "//components/autofill/core/common",
    "//components/password_manager/core/browser:browser",
    "//components/strings",
    "//ios/chrome/browser",
    "//ios/chrome/browser/ui/settings:settings_root",
    "//ios/chrome/browser/ui/settings/autofill",
    "//ios/chrome/browser/ui/table_view/cells",
    "//ios/chrome/browser/ui/util",
    "//ios/chrome/common/ui/util",
    "//ui/base",
  ]
}
